...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Kanakangi">
                                            <attributes>
                                                <font key="NSFont" size="24" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="All Ragas">
                                            <attributes>
                                                <font key="NSFont" size="24" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <rect key="frame" x="16" y="748" width="69" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Play">
                                            <attributes>
                                                <font key="NSFont" size="18" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <rect key="frame" x="99" y="747" width="70" height="49"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Raga">
                                            <attributes>
                                                <font key="NSFont" size="18" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <rect key="frame" x="177" y="748" width="114" height="49"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Instrument">
                                            <attributes>
                                                <font key="NSFont" size="18" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
                                <rect key="frame" x="288" y="747" width="96" height="48"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="tintColor" systemColor="labelColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Settings">
                                            <attributes>
                                                <font key="NSFont" size="18" name="Helvetica"/>
                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                            </attributes>
                                        </fragment>
                                    </attributedString>
...
